# yafowil.widget.slider

./: .gitignore  CHANGES.rst  HISTORY.rst  LICENSE.rst  Makefile  README.rst  TODO.rst  buildout.cfg  karma.conf.js  mx.ini  mxmake.yaml  package.json  pyproject.toml  rollup.conf.js  setup.py
.github/workflows/: test_js.yaml  test_py.yaml
js/: coverage.js  karma-coverage.js  karma.conf.js  rollup.conf.js
js/src/: bundle.js  widget.js
js/src/default/: bundle.js  widget.js
js/tests/: helper_functions.js  test_slider.js  test_test.js  test_widget.js
scripts/: coverage.sh  install.sh  test.sh
scss/: widget.scss
scss/bootstrap5/: widget.scss
src/yafowil/widget/slider/: __init__.py  example.py  tests.py  widget.py  widget.rst  yafowil.widget.slider.js  yafowil.widget.slider.js.map  yafowil.widget.slider.min.js  yafowil.widget.slider.min.js.map
src/yafowil/widget/slider/resources/: jquery-ui-1.8.16.slider.bootstrap.css  jquery-ui-1.8.18.slider.css  jquery-ui-1.8.18.slider.min.js  jquery.ui.slider.plone5.css  widget.css  widget.js  widget.min.css  widget.min.js
src/yafowil/widget/slider/resources/bootstrap5/: widget.css  widget.min.css
src/yafowil/widget/slider/resources/default/: widget.css  widget.js  widget.min.js
src/yafowil/widget/slider/tests/: test_widget.py
